[tool.poetry]
name = "recursive-code-config"
version = "0.1.0"
description = "Customize your own version of Recursive for code. Build your own, or find the built fonts in releases within the main Recursive repo."
authors = ["arrowtype"]
license = "MIT"
readme = "README.md"
homepage = "https://www.recursive.design/"
repository = "https://github.com/arrowtype/recursive-code-config"
packages = [{include = "recursive_code_config"}]

[tool.poetry.dependencies]
python = "^3.10"
fonttools = "4.17.0"
font-v = "1.0.5"
opentype-feature-freezer = "1.32.2"
skia-pathops = "0.7.0"
pyyaml = "5.4.1"
ttfautohint-py = ">=0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
